fix: align items in all pages

--- a/dna-web-frontend/src/Pages/Search/search.module.css
+++ b/dna-web-frontend/src/Pages/Search/search.module.css
@@ -1,18 +1,8 @@
 .body{
+    display: flex;
     align-items: center;
-    flex-direction: row;
-    min-height: 100vh;
-}
-
-/* .body {
-    position: relative;
-    height: 100vh;
-} */
-
-.container {
-    position: absolute;
-    top: 20%;
-    left: 20%;
+    flex-direction: column;
+    margin-top: 100px;
 }
 
 .search {
@@ -22,15 +12,13 @@
 }
 
 .resultContainer {
-    display: inline-block;
-    position: absolute;
-    top: 120%;
-    left: 33%;
+  margin-top: 30px;
 }
 
 .resultsCount {
-  display: absolute;
-  left: 80%;
+  display: flex;
+  align-items: center;
+  margin-left: 70px;
 }
 .resultHeading {
     color: var(--white2);
